--- a/1.html
+++ b/1.html
@@ -3,6 +3,15 @@
 <head>
 <title>ASTRO 미니 7집 GATEWAY-KNOCK</title>
 <meta charset="utf-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JWR7YP1K6P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JWR7YP1K6P');
+</script>
 </head>
 <body>
 <h1><a href="index.html">GATEWAY</a></h1><br>
@@ -15,7 +24,8 @@
     <li><a href="6.html">빛이 돼줄게</a></li>
 </ol>
 
-<h2><a href="https://youtu.be/Zz7YZtpz2Ek" target="_blank" title="ASTRO KNOCK MV">KNOCK(널 찾아가)</a></h2><br>
+<h2><a href="https://youtu.be/Zz7YZtpz2Ek" target="_blank" title="ASTRO KNOCK MV">KNOCK(널 찾아가)</a></h2>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/Zz7YZtpz2Ek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <img src="knock.jpg" width="40%">
 <p>가만히 두 눈 감아 널 떠올린 밤<br>
 어디쯤을 시리도록 걷고 있을까<br>
