--- a/3.html
+++ b/3.html
@@ -3,6 +3,15 @@
 <head>
 <title>ASTRO 미니 7집 GATEWAY-SOMEBODY LIKE</title>
 <meta charset="utf-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JWR7YP1K6P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JWR7YP1K6P');
+</script>
 </head>
 <body>
 <h1><a href="index.html">GATEWAY</a></h1><br>
